# jupyterlab-plugin-playground

./: .copier-answers.yml  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .gitpod.yml  .prettierignore  .readthedocs.yaml  .yarnrc.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  eslint.config.js  install.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  check-modules-map.yml  check-release.yml  preview-badges-on-pr.yml
binder/: environment.yml  overrides.json  postBuild
docs/: conf.py  environment.yml  index.md  jupyter-lite.json  jupyter_lite_config.json
docs/content/: example.js  example.ts
galata/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js
jupyter-config/jupyter_server_config.d/: jupyterlab_plugin_playground.json
jupyterlab-plugin-playground/: __init__.py
jupyterlab_plugin_playground/: __init__.py
lib/: plugin.js
schema/: plugin.json  settings.json
scripts/: @jupyter-widgets.js  check-extension-examples.js  modules.py  server.py  test.js  widget.js
src/: command-completion.ts  contents.ts  dialogs.tsx  errors.tsx  example-sidebar.tsx  icons.ts  index.ts  loader.ts  modules.ts  raw-loader.d.ts  requirejs.ts  resolver.ts  token-sidebar.tsx  transpiler.ts  types.ts
style/: base.css
ui-tests/: README.md  package.json
ui-tests/tests/: plugin-playground.spec.ts
