[build-system]
requires = [
    "hatchling",
    "jupyterlab~=3.0",
    "hatch-nodejs-version",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-plugin-playground"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[project.license]
file = "LICENSE"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_plugin_playground/labextension/static" = "share/jupyter/labextensions/@jupyterlab/plugin-playground/static"
"jupyterlab_plugin_playground/labextension/schemas/@jupyterlab/plugin-playground" = "share/jupyter/labextensions/@jupyterlab/plugin-playground/schemas/@jupyterlab/plugin-playground"
"install.json" = "share/jupyter/labextensions/@jupyterlab/plugin-playground/install.json"
"jupyterlab_plugin_playground/labextension/package.json" = "share/jupyter/labextensions/@jupyterlab/plugin-playground/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_plugin_playground/labextension/static/style.js",
    "jupyterlab_plugin_playground/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_plugin_playground/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyterlab_plugin_playground/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[[tool.jupyter-releaser.hooks]]
before-build-npm": [
    "python -m pip install jupyterlab~=3.0",
    "jlpm"
]
